refactor: improve input validation and streamline attempt creation logic