@@ -13,6 +13,7 @@ import org.springframework.stereotype.Service;
 
 import java.time.OffsetDateTime;
 import java.util.*;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -24,12 +25,15 @@ public class RideRequestDriverAttemptService {
     private final RiderRepository riderRepository;
 
     public List<Rider> createAttemptsForRound(RideRequestEntity rideRequestEntity, List<Rider> riders, int notificationRound) {
-        if (Objects.isNull(rideRequestEntity) || Objects.isNull(riders) || riders.isEmpty()) {
+        if (isInvalidAttemptInput(rideRequestEntity, riders)) {
             return List.of();
         }
 
-        Map<String, RiderEntity> persistedRiders = riderRepository.findByIdentifierIn(extractIdentifiers(riders)).stream()
-                .collect(Collectors.toMap(RiderEntity::getIdentifier, rider -> rider));
+        Map<String, RiderEntity> persistedRiders = fetchPersistedRiders(riders);
+        if (persistedRiders.isEmpty()) {
+            log.warn("No persisted riders found for ride request {}", rideRequestEntity.getId());
+            return List.of();
+        }
 
         OffsetDateTime notifiedAt = OffsetDateTime.now();
         List<RideRequestDriverAttemptEntity> attempts = new ArrayList<>();
@@ -37,19 +41,17 @@ public class RideRequestDriverAttemptService {
 
         for (Rider rider : riders) {
             RiderEntity persistedRider = persistedRiders.get(rider.getIdentifier());
-            if (Objects.isNull(persistedRider)) {
+            if (persistedRider == null) {
                 log.warn("Skipping rider {} because no MySQL rider record was found", rider.getIdentifier());
                 continue;
             }
-
-            attempts.add(RideRequestDriverAttemptEntity.builder()
-                    .rideRequest(rideRequestEntity)
-                    .rider(persistedRider)
-                    .notificationRound(notificationRound)
-                    .notifiedAt(notifiedAt)
-                    .status(AttemptStatus.NOTIFIED)
-                    .build());
+            attempts.add(buildAttempt(rideRequestEntity, persistedRider, notificationRound, notifiedAt));
             persistedCandidates.add(rider);
+        }
+
+        if (attempts.isEmpty()) {
+            log.warn("No attempts created for ride request {} after filtering", rideRequestEntity.getId());
+            return List.of();
         }
 
         attemptRepository.saveAll(attempts);
@@ -62,12 +64,12 @@ public class RideRequestDriverAttemptService {
                 .filter(Objects::nonNull)
                 .map(RiderEntity::getIdentifier)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toSet());
+                .collect(Collectors.toCollection(LinkedHashSet::new));
     }
 
     public int getNextNotificationRound(Long rideRequestId) {
         Integer maxRound = attemptRepository.findMaxNotificationRound(rideRequestId);
-        return Objects.isNull(maxRound) ? 1 : maxRound + 1;
+        return maxRound == null ? 1 : maxRound + 1;
     }
 
     public void markOutstandingAttemptsAsTimedOut(Long rideRequestId) {
@@ -76,11 +78,7 @@ public class RideRequestDriverAttemptService {
             return;
         }
 
-        OffsetDateTime respondedAt = OffsetDateTime.now();
-        openAttempts.forEach(attempt -> {
-            attempt.setStatus(AttemptStatus.TIMED_OUT);
-            attempt.setRespondedAt(respondedAt);
-        });
+        updateAttemptsStatus(openAttempts, AttemptStatus.TIMED_OUT, OffsetDateTime.now());
         attemptRepository.saveAll(openAttempts);
     }
 
@@ -93,16 +91,42 @@ public class RideRequestDriverAttemptService {
     }
 
     public void markOtherOpenAttemptsAsCanceled(Long rideRequestId, String acceptedRiderIdentifier, OffsetDateTime respondedAt) {
-        List<RideRequestDriverAttemptEntity> openAttempts = attemptRepository.findByRideRequestIdAndStatus(rideRequestId, AttemptStatus.NOTIFIED);
-        List<RideRequestDriverAttemptEntity> attemptsToCancel = openAttempts.stream()
+        List<RideRequestDriverAttemptEntity> attemptsToCancel = attemptRepository
+                .findByRideRequestIdAndStatus(rideRequestId, AttemptStatus.NOTIFIED)
+                .stream()
+                .filter(this::hasRider)
                 .filter(attempt -> !Objects.equals(attempt.getRider().getIdentifier(), acceptedRiderIdentifier))
-                .toList();
+                .collect(Collectors.toList());
 
-        attemptsToCancel.forEach(attempt -> {
-            attempt.setStatus(AttemptStatus.CANCELED);
-            attempt.setRespondedAt(respondedAt);
-        });
+        if (attemptsToCancel.isEmpty()) {
+            return;
+        }
+
+        updateAttemptsStatus(attemptsToCancel, AttemptStatus.CANCELED, respondedAt);
         attemptRepository.saveAll(attemptsToCancel);
+    }
+
+    private Map<String, RiderEntity> fetchPersistedRiders(List<Rider> riders) {
+        Set<String> identifiers = extractIdentifiers(riders);
+        if (identifiers.isEmpty()) {
+            return Map.of();
+        }
+        return riderRepository.findByIdentifierIn(identifiers).stream()
+                .collect(Collectors.toMap(RiderEntity::getIdentifier, Function.identity()));
+    }
+
+    private boolean isInvalidAttemptInput(RideRequestEntity rideRequestEntity, List<Rider> riders) {
+        return rideRequestEntity == null || riders == null || riders.isEmpty();
+    }
+
+    private RideRequestDriverAttemptEntity buildAttempt(RideRequestEntity request, RiderEntity rider, int round, OffsetDateTime notifiedAt) {
+        return RideRequestDriverAttemptEntity.builder()
+                .rideRequest(request)
+                .rider(rider)
+                .notificationRound(round)
+                .notifiedAt(notifiedAt)
+                .status(AttemptStatus.NOTIFIED)
+                .build();
     }
 
     private Set<String> extractIdentifiers(List<Rider> riders) {
@@ -110,5 +134,16 @@ public class RideRequestDriverAttemptService {
                 .map(Rider::getIdentifier)
                 .filter(Objects::nonNull)
                 .collect(Collectors.toSet());
+    }
+
+    private boolean hasRider(RideRequestDriverAttemptEntity attempt) {
+        return attempt.getRider() != null && attempt.getRider().getIdentifier() != null;
+    }
+
+    private void updateAttemptsStatus(List<RideRequestDriverAttemptEntity> attempts, AttemptStatus status, OffsetDateTime respondedAt) {
+        attempts.forEach(attempt -> {
+            attempt.setStatus(status);
+            attempt.setRespondedAt(respondedAt);
+        });
     }
 }
